--- a/sales.html
+++ b/sales.html
@@ -7,6 +7,6 @@
     <title>Pat's Salmon Cookies</title>
 </head>
 <body id="sales">
-    <script src="app.js" type="javascript"></script>
+    <script src="app.js"></script>
 </body>
 </html>
