Rendered store data to sales.html

--- a/sales.html
+++ b/sales.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Pat's Salmon Cookies</title>
 </head>
-<body id="sales">
+<body>
+    <main id="sales"></main>
     <script src="app.js"></script>
 </body>
 </html>
