--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Pat's Salmon Cookies</title>
 </head>
-<body id="main">
+<body>
+    <main id="index"></main>
     <script src="app.js"></script>
 </body>
 </html>
