Split app.js into separate files for each html page

--- a/sales.html
+++ b/sales.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <main id="sales"></main>
-    <script src="app.js"></script>
+    <script src="scripts/sales.js"></script>
 </body>
 </html>
