--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <main id="home"></main>
-    <script src="app.js"></script>
+    <script src="scripts/home.js"></script>
 </body>
 </html>
