Created store constructor and placed it in a separate file.

--- a/sales.html
+++ b/sales.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <main id="sales"></main>
+    <script src="scripts/storeConstructor.js"></script>
     <script src="scripts/sales.js"></script>
 </body>
 </html>
