Moved row generation to the constructor and reordered generateTable function

--- a/sales.html
+++ b/sales.html
@@ -9,7 +9,11 @@
     <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
-    <main id="sales"></main>
+    <main id="sales">
+        <table id="store-table" class="store-table">
+            
+        </table>
+    </main>
     <script src="scripts/storeConstructor.js"></script>
     <script src="scripts/sales.js"></script>
 </body>
