--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
-    <main id="home"></main>
+    <main id="home">
+        <div class="bottom-left"></div>
+        <div class="top"></div>
+    </main>
     <script src="scripts/home.js"></script>
 </body>
 </html>
