Created reusable classes for element widths

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <main id="home">
-        <div class="bottom-left"></div>
-        <div class="top"></div>
+        <div class="bottom-left col-3 skew"></div>
+        <div class="top skew"></div>
     </main>
     <script src="scripts/home.js"></script>
 </body>
