Added new images to imgs folder. Moved footer to js file to generate it on all subsequent pages.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="bottom-left col-3 skew"></div>
         <div class="top skew"></div>
     </main>
-    <footer class='footer'>2019 &copy; Pat's Salmon Cookies</footer>
+    <script src="scripts/navFooter.js"></script>
     <script src="scripts/home.js"></script>
 </body>
 </html>
