--- a/sales.html
+++ b/sales.html
@@ -36,6 +36,7 @@
             
         </table>
     </main>
+    <script src="scripts/navFooter.js"></script>
     <script src="scripts/storeConstructor.js"></script>
     <script src="scripts/sales.js"></script>
 </body>
