Added skew divs to the sales page.

--- a/sales.html
+++ b/sales.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
+    <div class="bottom-left col-3 skew"></div>
+    <div class="top skew"></div>
     <main id="sales">
         <form id="add-new-location">
             <fieldset>
