Added table-headings and styled

--- a/sales.html
+++ b/sales.html
@@ -31,12 +31,10 @@
                 <button type="submit">Add Store Data</button>
             </fieldset>
         </form>
-        <table id="store-table" class="store-table">
-            
-        </table>
-        <table id="staff-table" class="store-table">
-            
-        </table>
+        <h2 class="table-heading col-10">Cookie Production</h2>
+        <table id="store-table" class="store-table col-10"></table>
+        <h2 class="table-heading col-10">Cookie Tossers Needed Hourly</h2>
+        <table id="staff-table" class="store-table col-10"></table>
     </main>
     <script src="scripts/navFooter.js"></script>
     <script src="scripts/storeConstructor.js"></script>
