Added buttons to home page to change page styles

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <body>
     <div class="bottom-left col-3 skew"></div>
     <div class="top skew"></div>
+    <button type="button" class="style-button">Normal Style</button>
+    <button type="button" class="style-button">Different Style</button>
     <main id="home">
     </main>
     <script src="scripts/navFooter.js"></script>
