--- a/sales.html
+++ b/sales.html
@@ -35,6 +35,29 @@
                 <button type="submit">Add Store Data</button>
             </fieldset>
         </form>
+        <form id="update-store-data" class="form col-10">
+            <fieldset>
+                <legend class="form-legend">Update store data:</legend>
+
+                <label class="form-label" for='location'>Location Name 
+                    <input id="location" class="form-input" name="location" type="text" placeholder="SeaTac Airport" required>
+                </label>
+
+                <label class="form-label" for='min-customers'>Min Customers Per Hour 
+                    <input id="min-customers" class="form-input" name="min-customers" type="text" placeholder="23" required>
+                </label>
+
+                <label class="form-label" for='max-customers'>Max Customers Per Hour 
+                    <input id="max-customers" class="form-input" name="max-customers" type="text" placeholder="65" required>
+                </label>
+
+                <label class="form-label" for='avg-cookies'>Avg Cookies Per Customer 
+                    <input id="avg-cookies" class="form-input" name="avg-cookies" type="text" placeholder="3.8" required>
+                </label>
+
+                <button type="submit">Add Store Data</button>
+            </fieldset>
+        </form>
         <h2 class="table-heading col-10">Cookie Production</h2>
         <table id="store-table" class="store-table col-10"></table>
         <h2 class="table-heading col-10">Cookie Tossers Needed Hourly</h2>
