Resized sales forms and styled buttons.

--- a/sales.html
+++ b/sales.html
@@ -12,7 +12,7 @@
     <div class="bottom-left col-3 skew"></div>
     <div class="top skew"></div>
     <main id="sales">
-        <form id="add-new-location" class="form col-10">
+        <form id="add-new-location" class="form col-11">
             <fieldset>
                 <legend class="form-legend">Add a new store to the table:</legend>
 
@@ -32,10 +32,10 @@
                     <input id="avg-cookies" class="form-input" name="avg-cookies" type="text" placeholder="3.8" required>
                 </label>
 
-                <button type="submit">Add Store Data</button>
+                <button type="submit" class="form-button">Add Store Data</button>
             </fieldset>
         </form>
-        <form id="update-store-data" class="form col-10">
+        <form id="update-store-data" class="form col-11">
             <fieldset>
                 <legend class="form-legend">Update store data:</legend>
 
@@ -55,7 +55,7 @@
                     <input id="avg-cookies" class="form-input" name="avg-cookies" type="text" placeholder="3.8" required>
                 </label>
 
-                <button type="submit">Add Store Data</button>
+                <button type="submit" class="form-button">Update Store Data</button>
             </fieldset>
         </form>
         <h2 class="table-heading col-10">Cookie Production</h2>
