Removed alternative style buttons and ugly pictures from footer. Added navigation links to move from home to sales and back.

--- a/index.html
+++ b/index.html
@@ -12,11 +12,10 @@
     <div class="bottom-left col-3 skew"></div>
     <div class="top skew"></div>
     <main id="home">
-        <button type="button" class="style-button">Normal Style</button>
-        <button type="button" class="style-button">Different Style</button>
+        <a href="index.html" class="nav-link">Home</a>
+        <a href="sales.html" class="nav-link">Sales</a>
     </main>
     <script src="scripts/navFooter.js"></script>
     <script src="scripts/home.js"></script>
-    <script src="scripts/styleButtons.js"></script>
 </body>
 </html>
