--- a/sales.html
+++ b/sales.html
@@ -12,6 +12,8 @@
     <div class="bottom-left col-3 skew"></div>
     <div class="top skew"></div>
     <main id="sales">
+        <a href="index.html" class="nav-link">Home</a>
+        <a href="sales.html" class="nav-link">Sales</a>
         <form id="add-new-location" class="form col-11">
             <fieldset>
                 <legend class="form-legend">Add a new store to the table:</legend>
